grpc/grpc-app2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fortune-teller-app2
  labels:
    k8s-app: fortune-teller-app2
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: fortune-teller-app2
    spec:
      containers:
      - name: fortune-teller-app2
        image: quay.io/kubernetes-ingress-controller/grpc-fortune-teller:0.1
        ports:
        - containerPort: 50051
          name: grpc
