grpc/grpc-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-service2
  namespace: default
spec:
  selector:
    k8s-app: fortune-teller-app2
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
